增加分类插件

--- a/themes/hugo-theme-stack/i18n/zh-CN.yaml
+++ b/themes/hugo-theme-stack/i18n/zh-CN.yaml
@@ -50,6 +50,11 @@ widget:
             other: 标签云
         more: 
             other: 更多
+    categories:
+        title:
+            other: 分类
+        more:
+            other: 更多
 
 search:
     title:
