修改多语言

--- a/themes/hugo-theme-stack/i18n/zh-CN.yaml
+++ b/themes/hugo-theme-stack/i18n/zh-CN.yaml
@@ -61,7 +61,7 @@ search:
         other: 搜索
 
     placeholder:
-        other: 输入关键词...
+        other: 请输入关键词
 
     resultTitle:
         other: "#PAGES_COUNT 个结果 （用时 #TIME_SECONDS 秒）"
