完成豆瓣卡片移植

--- a/content/posts/从「失控玩家」中得到的启示.md
+++ b/content/posts/从「失控玩家」中得到的启示.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 1005876321
 categories:
 - 生活感悟
@@ -13,6 +13,7 @@ tags:
 title: 从「失控玩家」中得到的启示
 toc: true
 ---
+{{<douban type="movie" id="30337388">}}
 
 也许，在某一个不寻常的清晨，突然从睡梦中惊醒的你，开始重新审视周围的一切，这个习以为常的世界，是否是真实的呢？而这种疑问，「黑客帝国」里的 Neo 有过，「西部世界」里的 Dolores 有过，甚至，连庄周梦蝶这个故事，都在探讨同一个哲学命题，即：人应该如何认识真实。从某种意义上来讲，游戏世界是现实世界的一种映射，这种对人类文明进行解构，并尝试进行重新演绎的做法，其本身就有种浓厚的哲学意味，正如古希腊人刻在阿波罗神殿里的那句名言，『人啊，认识你自己』。关于真实，这是人从诞生那一刻起，就在不断思考着的终究问题：我是谁？我从哪里来？要到哪里去？
 
