--- a/content/posts/无问东西：你曾是少年.md
+++ b/content/posts/无问东西：你曾是少年.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 1983298072
 categories:
 - 生活感悟
@@ -14,6 +14,8 @@ title: 无问东西：你曾是少年
 ---
 
 > 如果提前了解了你所要面对的人生，你是否还有勇气前来？
+
+{{<douban type="movie" id="6874741">}}
 
 这是电影《无问西东》里提出的一个问题。作为一部清华大学建校 100 周年的献礼片，在因为种种原因而被雪藏 6 年以后，终于以这样一种倔强而孤傲的姿态，进入到人们的视野。
 
