--- a/content/posts/浪客剑心：一曲幕末时代的挽歌.md
+++ b/content/posts/浪客剑心：一曲幕末时代的挽歌.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 673523131
 categories:
 - 生活感悟
@@ -14,6 +14,7 @@ tags:
 title: 浪客剑心：一曲幕末时代的挽歌
 toc: true
 ---
+{{<douban type="movie" id="33407124">}}
 
 近日，Netflix 官方宣布，浪客剑心·最终章：追忆篇 将于 7 月 30 日上线，这意味着这部横跨十年时间、被誉为漫改巅峰的系列电影，终于要迎来它的落幕。人对于时间的感觉，难免会相对迟钝一点。如果将思绪拉回到 2011 年，对我来说，人生中无数闪光的时刻，无一不是从这一刻开始：第一次拥有互相喜欢的人、第一次拥有属于我的电脑、第一次在图书馆里借满 100 本书……每次听别人说到漫威十年，我总觉得一切无比陌生。回想起来，第一次到电影院看电影，始于 Lemon 同学请我吃石锅拌饭，对于漫威英雄们的了解，更多的是事后诸葛亮，而唯有浪客剑心系列，一直陪伴着我走过这兵荒马乱的十年。所以，当这个系列走向终点的时候，我果然还是想说点自以为是的话，因为在时代的波涛里，每一个小人物的命运，都不过是艰难挣扎着活下去。
 
