--- a/content/posts/烟波梦影，从天国王朝到刺客信条.md
+++ b/content/posts/烟波梦影，从天国王朝到刺客信条.md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 861688878
 categories:
 - 生活感悟
 date: 2022-02-03 18:30:45
-description: null
+description: 尾声 育碧说， History Is Our Playground ，电影里的故事真真假假，游戏里的故事更不必说，甚至是我这些未曾考据过的文过饰非，可这恰恰是历史最为迷人的地方，一个人的形象，其实是由无数个人的记忆拼凑出来的，你可以去肆意地想象你心目中的鲍德温四世、萨拉丁，亦或者是狮心王理查一世、传奇刺客阿泰尔，只要这一切都能自圆其说
 slug: 861688878
 tags:
 - 历史
@@ -12,6 +12,8 @@ tags:
 - 随笔
 title: 烟波梦影，从天国王朝到刺客信条
 ---
+
+{{<douban type="movie" id="6860160">}}
 
 最近看了一部叫做[《天国王朝》](https://movie.douban.com/subject/1309071/)的电影，主要讲述了第三次十字军东征时期的一段故事：法兰克铁匠巴利安，因为受到失散多年的父亲的召唤，亦是为了替自杀而死的妻子寻求救赎，来到了三教圣城——耶路撒冷。其间，父亲亡故，巴利安承袭了爵位和封地，甚至得到了西贝拉公主的青睐，可这依然无法阻止他深陷十字军的政治漩涡。当时，身染麻风病的耶路撒冷王鲍德温四世与阿拉伯传奇英雄萨拉丁，维持着基督教与伊斯兰教之间脆弱的和平；而以居伊和雷纳德为首的好战势力，则通过袭击穆斯林的方式不断挑起争端。战争终于不可避免地爆发了，这正是历史上著名的哈丁之战。此后，狮心王理查一世独自面对东方世界的滚滚黄沙，东西方的军事、宗教和文化碰撞出火花，更是堪比双子星一般的存在。
 
