--- a/content/posts/一念执着，千山无阻.md
+++ b/content/posts/一念执着，千山无阻.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 2613006280
 categories:
 - 生活感悟
@@ -13,6 +13,7 @@ tags:
 - 电影
 title: 一念执着，千山无阻
 ---
+{{<douban type="movie" id="26393561">}}
 
 &emsp;&emsp;上周看了部印度电影《小萝莉的猴神大叔》，以一言敝之，这是一部被名字耽误的好电影，就像我们所熟知的《三傻大闹宝莱坞》、《偶滴个神呐》、《外星醉汉 PK 地球神》等等电影一样。不过作为一部由“印度三汗”之一萨尔曼·汗主演的电影，可能因为其在国内的知名度不及阿米尔·汗，所以早在这部 2015 年就上映的电影，并未在国内产生太显著的影响力。相反，同档电影《环太平洋 2》票房热度居高不下，大概是因为景甜姐姐终于不负国人期望去拯救全人类啦。即使当时电影院里看这部电影的人寥寥无几，可我觉得还是有必要给大家说一说这部电影，一个即使你能猜对所有情节依然会喜欢的电影。
 
