--- a/content/posts/米花之味：永远相信美好的事情.md
+++ b/content/posts/米花之味：永远相信美好的事情.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 2941880815
 categories:
 - 生活感悟
@@ -11,6 +11,8 @@ tags:
 - 电影
 title: 米花之味：永远相信美好的事情
 ---
+
+{{<douban type="movie" id="27077266">}}
 
 一如往常地坐公交回家，下过一场雨以后，天空被洗刷得干干净净，洗去了夏天的骄阳似火，洗去了归途的月明星稀。抬眼瞥见对面车窗，一个被夕阳裁剪得整齐的轮廓，就这样静静地映在玻璃上，一瞬间散发某种神圣的气息。突然间，我想到了被嘲笑不会撩妹的 X 君，想到了自嘲不会拒绝别人的 Y 君，想到了喜欢一个人而爱不得的 Z 君……大概这个模糊的轮廓，可以是这个世界上任何一个人。
 
