修复图片链接

--- a/content/posts/写在冬阳升起以前.md
+++ b/content/posts/写在冬阳升起以前.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 2145169599
 categories:
 - 生活感悟
@@ -14,7 +14,7 @@ title: 写在冬阳升起以前
 toc: true
 ---
 
-![某个冬天的清晨](冬阳.jpg)
+![某个冬天的清晨](/posts/写在冬阳升起以前/冬阳.jpg)
 
 
 突然间想要写点什么，或许是我终于发觉，一个人内心的疲惫感，是会像水里泛起的涟漪一样，一圈圈地向远方散开去，直至在某个时刻产生了共振，这种感觉就仿佛是，冬天的清晨，于雾气中升起的太阳，虽然无法令你感受到炽热，可依然会令你感到刺目甚至眩晕，圣人有云，“劳心者治人，劳力者治于人”，而这种劳心又劳力的状态，属实是一个普通打工人，经常要去面对的一件事情，因此，我想要说的，本质上是一种薛定谔的状态，它代表着温暖，代表着光明，可以给你生存所需要的一切，可于此同时，它又代表着炽热，代表着煎熬，可以毫无顾忌地灼伤你裸露的心。
