--- a/content/posts/烟波梦影，从天国王朝到刺客信条.md
+++ b/content/posts/烟波梦影，从天国王朝到刺客信条.md
@@ -1,13 +1,9 @@
----
-description: ''
----
-
 ﻿---
 abbrlink: 861688878
 categories:
 - 生活感悟
 date: 2022-02-03 18:30:45
-description: 尾声 育碧说， History Is Our Playground ，电影里的故事真真假假，游戏里的故事更不必说，甚至是我这些未曾考据过的文过饰非，可这恰恰是历史最为迷人的地方，一个人的形象，其实是由无数个人的记忆拼凑出来的，你可以去肆意地想象你心目中的鲍德温四世、萨拉丁，亦或者是狮心王理查一世、传奇刺客阿泰尔，只要这一切都能自圆其说
+description: 
 slug: 861688878
 tags:
 - 历史
