--- a/content/posts/作为技术宅的我，是这样追鬼滅の刃的.md
+++ b/content/posts/作为技术宅的我，是这样追鬼滅の刃的.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 3602353334
 categories:
 - 编程语言
@@ -15,6 +15,7 @@ tags:
 title: 作为技术宅的我，是这样追鬼滅の刃的
 toc: true
 ---
+{{<douban type="movie" id="30210221">}}
 
 有人说，“男人至死都是少年”，而这句听起来有一点中二的话，其实是出自一部同样有一点中二的动漫——银魂。我个人的理解是，知世故而不世故。也许，年轻时那些天马行空的想法，就像堂吉诃德大战风车一样荒诞，可依然愿意去怀着这样的梦想去生活。正如罗曼罗兰所言，**“世上只有一种英雄主义，就是在认清生活真相之后依然热爱生活”**。所以，继《浪客剑心》之后，我再次被一部叫做《鬼灭之刃》的动漫吸引，毕竟男人的快乐往往就是这么朴实无华且枯燥。一个快三十岁的人，如果还能被一部热血少年番吸引，大概可以说明，他身体里的中二少年连同中二少年魂还活着。最早的印象来自朋友圈里的一位二次元“少年”，他和自己儿子站一起，有种浑然天成的协调感，整个人是非常年轻的感觉。所以，大概，男人至死都是少年。
 
