--- a/content/posts/行走在消逝中.md
+++ b/content/posts/行走在消逝中.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 2809571715
 categories:
 - 生活感悟
@@ -11,8 +11,7 @@ tags:
 - 请记住我
 title: 行走在消逝中
 ---
-
-{% meting "523845740" "netease" "song" "autoplay" "mutex:false" "listmaxheight:340px" "preload:none" "theme:#ad7a86"%}
+{{<meting server="netease" type="song" id="523845740">}}
 
 从昨天到今天，关于霍金逝世的消息，一直在朋友圈里刷屏。昨天同事告诉我这个消息的时候，我心底先是一片恍惚，而后习惯性地打开微信，发现朋友圈和公众号里都在讨论这件事情。而等到我吃饭的时候，居然听到临桌的一名男生，在向同伴讲述霍金辐射的理论，堪称我在这一天所见过的一股清流。不知道从什么时候开始，一个人物的突然离去，总是会让人们在短时间内亢奋起来，仿佛一场集体缅怀的狂欢。回顾最近这些年来已故的名人，例如杨绛先生、杨洁导演、词作家闫肃、作家黄易等等，每每提及不禁令人一阵唏嘘，正所谓“逝者已矣，生者如斯”。可我想说的是，不要总是等到离开的时候，才会想起一个人的存在。
 
