修复部分文章显示异常的问题

--- a/content/posts/浪客剑心：一曲幕末时代的挽歌.md
+++ b/content/posts/浪客剑心：一曲幕末时代的挽歌.md
@@ -1,8 +1,4 @@
----
-description: ''
----
-
-﻿---
+﻿﻿---
 abbrlink: 673523131
 categories:
 - 生活感悟
@@ -17,6 +13,7 @@ tags:
 - 佐藤健
 title: 浪客剑心：一曲幕末时代的挽歌
 toc: true
+image: 
 ---
 {{<douban type="movie" id="33407124">}}
 
