--- a/content/posts/米花之味：永远相信美好的事情.md
+++ b/content/posts/米花之味：永远相信美好的事情.md
@@ -1,8 +1,4 @@
----
-description: ''
----
-
-﻿---
+﻿﻿---
 abbrlink: 2941880815
 categories:
 - 生活感悟
@@ -14,6 +10,7 @@ tags:
 - 米花之味
 - 电影
 title: 米花之味：永远相信美好的事情
+description:
 ---
 
 {{<douban type="movie" id="27077266">}}
