--- a/content/posts/草食系程序员的穿搭指南.md
+++ b/content/posts/草食系程序员的穿搭指南.md
@@ -1,8 +1,4 @@
----
-description: ''
----
-
-﻿---
+﻿﻿---
 abbrlink: 94443781
 categories: 生活感悟
 date: 2018-07-25 10:11:35
@@ -13,6 +9,7 @@ tags:
 - 程序员
 - 穿搭
 title: 草食系程序员的穿搭指南
+description: 
 ---
 
 {{<meting server="netease" type="song" id="432821964">}}
