--- a/content/posts/源代码探案系列之 .NET Core 并发限制中间件 ConcurrencyLimiter.md
+++ b/content/posts/源代码探案系列之 .NET Core 并发限制中间件 ConcurrencyLimiter.md
@@ -1,8 +1,4 @@
----
-description: ''
----
-
-﻿---
+﻿﻿---
 slug: 18417412
 toc: true
 title: 源代码探案系列之 .NET Core 并发限制中间件 ConcurrencyLimiter
@@ -16,6 +12,7 @@ tags:
 copyright: true
 abbrlink: 18417412
 date: 2021-03-04 20:13:47
+description: 
 ---
 打算开一个新的专栏——**源代码探案系列**，目的是通过源代码来探索更广阔的技术世界。因为我越来越意识到，我可能缺乏一个结构化的知识体系，虽然处在一个碎片化的时代，从外界接收了大量的信息，可这些碎片化的信息，到底能不能转化为自身可用的知识，其实是需要去认真思考一番。尤其是当我注意到，许多人工作多年，在经历过从“**生手**”到“**熟练工**”这种蜕变以后，居然还是会害怕原理性内容的考察。我承认，程序员这个职业更像是一个“**手艺人**”，可我更想说一句古人的话——**君子不器**。什么是器呢？“**形而上者谓之道，形而下者谓之器**”，用一句更直白的话来说，就是“**不能知其然而不知其所以然**”，这是我一个非CS科班出身的程序员，想去写这样一个专栏的初衷，因为在我看来，“**器**”是永远学不完的，而“**道**”虽然听起来虚无缥缈，实则“**朝闻道，夕死可矣**”。
 
