--- a/content/posts/七种武器：延迟队列的原理和实现总结.md
+++ b/content/posts/七种武器：延迟队列的原理和实现总结.md
@@ -180,7 +180,7 @@ await _delayQueue.PutJob(
 
 ## Redis
 
-接下来，分享两种基于 Redis 实现延迟队列的做法，分别基于 `Redis` 的 Key 过期机制 和 `Redis` 的 `ZSet` 结构。
+接下来，分享两种基于 Redis 实现延迟队列的做法，分别基于 `Redis` 的 Key 过期机制 和 `Redis` 的 `ZSet` 结构，前者依赖 `Redis` 提供的发布-订阅机制，后者则是利用 `ZSet` 里每个成员的 `score` 属性实现排序。
 
 ### 基于 Redis 的 Key 过期机制
 
@@ -254,7 +254,6 @@ public class ZSetDelayQueue<T> where T : class
 
         return null;
     }
-
 
     public bool IsEmpty()
     {
