--- a/content/posts/七种武器：延迟队列的原理和实现总结.md
+++ b/content/posts/七种武器：延迟队列的原理和实现总结.md
@@ -50,7 +50,7 @@ while (delayQueue.size() != 0) {
     Thread.sleep(1000);
 }
 ```
-其中，`Order` 类要求实现 `Delayed` 接口，可以注意到 `compareTo()` 和 .NET 里的 `IComparable` 完全一样 :)
+其中，`Order` 类要求实现 `Delayed` 接口，可以注意到这个 `compareTo()` 方法和 .NET 里的 `IComparable` 完全一样 :)
 
 ```java
 public class Order implements Delayed {
@@ -98,12 +98,9 @@ while (queue.Count > 0)
 {
     var current = new DateTimeOffset(DateTime.UtcNow).ToUnixTimeSeconds();
     var flag = queue.TryPeek(out var item, out var timestamp);
-    if (!flag || current < timestamp)
-    {
+    if (!flag || current < timestamp){
         continue;
-    }
-    else
-    {
+    } else {
         item = queue.Dequeue();
         _logger.LogInformation($"{DateTimeOffset.UtcNow}:Hello DelayQueue, {item.Foo}, {item.Bar}.");
     }
@@ -152,14 +149,10 @@ internal class DelayJob<T> : IJob
     public Task Execute(IJobExecutionContext context)
     {
         var jobDetail = context.JobDetail;
-
         var callback = jobDetail.JobDataMap[QuartzDelayQueue.JobDelegate] as Action<T>;
-
         var jobData = context.MergedJobDataMap[QuartzDelayQueue.JobParameters]?.ToString();
         var jobParam = JsonConvert.DeserializeObject<T>(jobData);
-
         callback?.Invoke(jobParam);
-          
         return Task.CompletedTask;
     }
 }
@@ -217,7 +210,7 @@ public Task PutJob<T>(TimeSpan delay, T jobData, Action<T> callback)
 
 ![基于 Redis 的 Key 过期机制实现延迟队列](/posts/七种武器：延迟队列的原理和实现总结/DelayQueueByRedisKeyExpired.png)
 
-可以注意到，该任务在第 19 秒时创建，经过 5 秒后，因为 Key 过期而触发回调函数。需要说明的是，`Redis` 里的发布/订阅是不保证可靠性的，针对所有试图通过 `Redis` 实现消息队列的想法，我只想说，如果数据量不大，并且不需要可靠性保证的话，可以凑活着用一用，否则，还是建议使用专业的消息队列。
+可以注意到，该任务在第 29 秒时创建，经过 5 秒后，因为 Key 过期而触发回调函数。需要说明的是，`Redis` 里的发布/订阅是不保证可靠性的，针对所有试图通过 `Redis` 实现消息队列的想法，我只想说，如果数据量不大，并且不需要可靠性保证的话，可以凑活着用一用，否则，还是建议使用专业的消息队列。
 
 ### 基于 Redis 的 ZSet 结构
 
@@ -245,8 +238,7 @@ public class ZSetDelayQueue<T> where T : class
     {
         var score = new DateTimeOffset(DateTime.UtcNow).ToUnixTimeSeconds(); ;
         var records = _redisClient.ZRangeByScore(QueueName, 0, score, 1);
-        if (records.Count() > 0)
-        {
+        if (records.Count() > 0) {
             var item = JsonConvert.DeserializeObject<T>(records[0]);
             await _redisClient.ZRemAsync(QueueName, item);
             return item;
@@ -274,12 +266,9 @@ await redisZSetDelayQueue.Enqueue(new FooBar() { Foo = "003", Bar = "300" }, Tim
 while (!redisZSetDelayQueue.IsEmpty())
 {
     var item = await redisZSetDelayQueue.Dequeue();
-    if (item == null)
-    {
+    if (item == null) {
         continue;
-    }
-    else
-    {
+    } else {
         _logger.LogInformation($"{DateTimeOffset.UtcNow}:Hello DelayQueue, {item.Foo}, {item.Bar}.");
     }
 }
