--- a/content/posts/读-一个叫做欧维的男人决定去死.md
+++ b/content/posts/读-一个叫做欧维的男人决定去死.md
@@ -8,7 +8,7 @@ tags:
 - 感悟
 - 随笔
 - 情感
-title: 读《一个叫做欧维的男人决定去死》
+title: 读《一个叫欧维的男人决定去死》
 slug: A-Man-Called-Ove
 ---
 
@@ -16,7 +16,7 @@ slug: A-Man-Called-Ove
 
 ![莫名地想起项脊轩志](/posts/读-一个叫做欧维的男人决定去死/P2369981586.jpg)
 
-一开始看到这个设定，会很容易地联想到东野圭吾的 [《嫌疑人 X 的献身》](https://book.douban.com/subject/3211779/)，大抵都是一个对生活绝望的人一心求死，结果因为某一个人或者某一件事而做出改变。我想，大家对类似的设定感兴趣，或许是我们都渴望着被某一个人救赎，可即使是像石神哲哉这样智力超群的人，依然不会得到爱，我个人更愿意将这种情感，理解为一种介于人性和神性之间的美。从某种意义上来讲，沉浸在数学世界里的石神哲哉，妻子过世后只有黑白两色的欧维，其实是非常相似的两个人，都是一个自认为不被社会认可和需求的人，因为一次次被需要，然后重新体会到生命的价值。可惜，欧维比石神哲哉更幸运一点，因为他有一群笨拙而又温柔的邻居，正是这些“不速之客”们的“袭扰”，一点点地让这个外表固执、内心温柔的老人敞开心扉，最终同这个满目疮痍的世界完成和解。
+一开始看到这个设定，会很容易地联想到东野圭吾的 [《嫌疑人 X 的献身》](https://book.douban.com/subject/3211779/)，大抵都是一个对生活绝望的人一心求死，结果因为某一个人或者某一件事而做出改变。我想，大家对类似的设定感兴趣，或许是我们都渴望着被某一个人救赎，可即使是像石神哲哉这样智力超群的人，依然不会得到爱，我个人更愿意将这种情感，理解为一种介于人性和神性之间的美。从某种意义上来讲，沉浸在数学世界里的石神哲哉，妻子过世后只有黑白两色的欧维，其实是非常相似的两个人，都是一个自认为不被社会认可和需要的人，因为一次次被需要，然后重新体会到生命的价值。可惜，欧维比石神哲哉更幸运一点，因为他有一群笨拙而又温柔的邻居，正是这些“不速之客”们的“袭扰”，一点点地让这个外表固执、内心温柔的老人敞开心扉，最终同这个满目疮痍的世界完成和解。
 
 ![曾经被称为“来自地狱的恶邻”的男人](/posts/读-一个叫做欧维的男人决定去死/P2369981833.jpg)
 
