更新博客内容

--- a/content/posts/读-一个叫做欧维的男人决定去死.md
+++ b/content/posts/读-一个叫做欧维的男人决定去死.md
@@ -11,8 +11,9 @@ tags:
 title: 读《一个叫欧维的男人决定去死》
 slug: A-Man-Called-Ove
 ---
+{{<douban type="movie" id="26628357">}}
 
-最近读了一本书，来自瑞典作家弗雷德里克·巴克曼的处女作，[《一个叫欧维的男人决定去死》](https://book.douban.com/subject/27054340/)，该书于 2015 年被改编成同名电影，主要讲述了一个孤独老者生命中最后三周的故事，它的情节是如此的简单和质朴：一个一心赴死的固执老人，不断尝试使用各种方法“杀”死自己，结果因为一对新邻居的到来而频频被打断。随着寻求欧维帮助的人越来越多，欧维对于这个世界的牵挂越来越深，妻子死后变成黑白两色的单调世界，开始被这些贸然闯入的人们刷上新的色彩，而欧维同样成为了别人生命里的色彩。所以，这是一个温情而治愈的故事，欧维从决定自杀到放弃自杀，从排斥邻居到接纳邻居，这一系列的转变，让我不由得感慨：**原来生活本身，就是人与人之间的羁绊，终其一生，我们追求的幸福感，不过是被别人需要和认同。**
+最近读了一本书，来自瑞典作家弗雷德里克·巴克曼的处女作，[《一个叫欧维的男人决定去死》](https://book.douban.com/subject/27054340/)，该书于 2015 年被改编成同名电影，主要讲述了一个孤独老者生命中最后三周的故事，它的情节是如此的简单和质朴：一个一心赴死的、固执老人，不断尝试使用各种方法“杀”死自己，结果因为一对新邻居的到来而频频被打断。随着寻求欧维帮助的人越来越多，欧维对于这个世界的牵挂越来越深，妻子死后变成黑白两色的单调世界，开始被这些贸然闯入的人们刷上新的色彩，而欧维同样成为了别人生命里的色彩。所以，这是一个温情而治愈的故事，欧维从决定自杀到放弃自杀，从排斥邻居到接纳邻居，这一系列的转变，让我不由得感慨：**原来生活本身，就是人与人之间的羁绊，终其一生，我们追求的幸福感，不过是被别人需要和认同。**
 
 ![莫名地想起项脊轩志](/posts/读-一个叫做欧维的男人决定去死/P2369981586.jpg)
 
@@ -35,8 +36,7 @@ slug: A-Man-Called-Ove
 
 对生命而言，其实就是一个不断失去着的过程，当时间的皱纹一点点地爬上额头，这个命运多舛的男人还是失去了所有。在妻子去世半年以后，工厂里告诉他以后不用再去上班，虽然他曾像大多数人一样，在这里耗费四十多年的时光，“**他做了一切社会需要他做的事，工作，从不生病，结婚，贷款，缴税，自食其力，开正经的车，社会是怎么报答他的呢？它冲进办公室让他卷铺盖回家，这就是报答。某个星期一，突然他就没用了**”。也许，正是从那一刻起，欧维决定用死亡来对抗这个冷漠的世界，这个社会已经没法再生产出结实到可以吊死人的绳子，“**这是一个还没过期就已经过时的世界。整个国家都在为没人能正经做事起立鼓掌，毫无保留地为平庸欢呼喝彩**”，欧维同样不习惯这个没人会换轮胎、装开关、换瓷砖、粉刷墙壁、倒拖斗车的社会，如果说索雅是他生命里唯一的色彩，那么，当这唯一的色彩消失不见的时候，这个叫做欧维的男人决定去死。
 
-![一个叫做欧维的男人决定去死](/posts/读-一个叫做欧维的男人决定去死/P2548938590.jpg)
-
+![一个叫欧维的男人决定去死](/posts/读-一个叫做欧维的男人决定去死/P2548938590.jpg)
 
 毫无疑问，我们都是孤独的，而唯有爱才是生命里终极且永恒的救赎，真正让欧维不再寻死的救赎是爱，是那种发自内心的，对别人的关爱，正是一次又一次的“麻烦”，让别人意识到，这个有一点古怪、固执的老人，虽然有一套严谨、古板的处世哲学，其实内心深处是一个特别温柔的男人。曾经，他有过一个最要好的朋友鲁尼，他们一起为社区制定了公约、一起参与社区委员会主席的竞选，可最终他们因为汽车品牌的分歧而分道扬镳。也许，真正让欧维厌恶的，并不是好友买了一辆与自己完全不同的汽车，而是这个世界，对这个一无所有的老人不大温柔。欧维无法适应平板电脑这种新型电子设备、无法适应信用卡代替现金，他可以为了一张优惠券和店员争执上半天……这样一个被称为“来自地狱的恶邻”的男人，在妻子离开这个世界以后，显得与整个世界格格不入，他最“正常”的时候，是像年轻时那样穿好西装、戴上帽子、手里捧着一束鲜花去墓地看望妻子，那一刻他的世界突然又有了色彩。
 
