增加博客头图

--- a/content/posts/七种武器：延迟队列的原理和实现总结.md
+++ b/content/posts/七种武器：延迟队列的原理和实现总结.md
@@ -10,6 +10,7 @@ tags:
 - RabbitMQ
 title: 七种武器：延迟队列的原理和实现总结
 slug: Summary-Of-The-Principle-And-Implementation-Of-Delay-Queue
+image: /posts/七种武器：延迟队列的原理和实现总结/DelayQueue-XMind.png
 ---
 “**这是最好的时代，这是最坏的时代**”，英国作家查尔斯·狄更斯在两百多年前写下的这句话，如果从辩证的角度来看，它或许可以适用于任何一个时代。我们生活在一个怎样的时代呢？我想，或许是一个矛盾的时代。因为，有时它让你对未来有无限的期待，有时它又会让你陷入无尽的绝望，特别是当集体和个人的命运形成强烈反差的时候，当实用主义、精致利己主义开始盛行的时候，我们偶尔会感慨罗曼蒂克的消亡、怀念从前慢、追忆芳华，可下一秒就被卷入到同时间赛跑的庸庸碌碌当中。生活节奏越来越快，人们越来越追求实时、速度、效率，选择当下的同时，意味着选择实时满足，譬如，我想吃一块美味的蛋糕，我现在就要吃。与之相对的，则被称之延迟满足，譬如，制定一个长期的写作计划以实现个人知识网络的构建。由此可见，人生本来就有快有慢、有张有弛，此时，便引入了这篇文章的主题——延迟队列。
 
