--- a/content/posts/读-一个叫做欧维的男人决定去死.md
+++ b/content/posts/读-一个叫做欧维的男人决定去死.md
@@ -10,6 +10,7 @@ tags:
 - 情感
 title: 读《一个叫欧维的男人决定去死》
 slug: A-Man-Called-Ove
+image: "/posts/读-一个叫做欧维的男人决定去死/P2369981748.jpg"
 ---
 {{<douban type="movie" id="26628357">}}
 
