增加博客头图

--- a/content/posts/从「失控玩家」中得到的启示.md
+++ b/content/posts/从「失控玩家」中得到的启示.md
@@ -12,6 +12,7 @@ tags:
 - 哲学
 title: 从「失控玩家」中得到的启示
 toc: true
+image: /posts/从「失控玩家」中得到的启示/「风之旅人」游戏截图.jpg
 ---
 {{<douban type="movie" id="30337388">}}
 
