--- a/content/posts/浪客剑心：一曲幕末时代的挽歌.md
+++ b/content/posts/浪客剑心：一曲幕末时代的挽歌.md
@@ -13,7 +13,7 @@ tags:
 - 佐藤健
 title: 浪客剑心：一曲幕末时代的挽歌
 toc: true
-image: 
+image: https://i.loli.net/2021/07/09/VtUchpjIKZeBrWL.jpg
 ---
 {{<douban type="movie" id="33407124">}}
 
