--- a/content/posts/夕雾花园：从建筑中读出的爱情和美学.md
+++ b/content/posts/夕雾花园：从建筑中读出的爱情和美学.md
@@ -12,6 +12,7 @@ tags:
 - 历史
 title: 夕雾花园：从建筑中读出的爱情和美学
 toc: true
+image: https://i.loli.net/2021/08/27/D2mPAnxp3Zlo6hv.jpg
 ---
 
 {{<douban type="movie" id="30238379">}}
