--- a/content/posts/再见-人间四月天.md
+++ b/content/posts/再见-人间四月天.md
@@ -14,7 +14,7 @@ title: 再见，人间四月天
 toc: true
 image: 
 ---
-昨天从外面回来的时候，夕阳的余晖已被街市上的灯火掩没，直到渐渐地远离了闹市，夜晚的氛围终于在微风中扑面而来。抬头看时，深蓝色的天空中零星点缀着三两颗星星，我来不及驻足，已被人流裹挟着向前走去像往常一样，我转身走进菜场，人依然是那些人，不过陌生和熟悉实在是两种风景，譬如眉清目秀的“豆腐西施”，陌生时你只觉得清冷，而熟悉时你会觉得杀伐果断。这一个月下来，卖菜的阿姨甚至记住了我，看我买了圆白菜、胡萝卜和洋葱，便问我是打算做炒面麽，我还是像过去一样点点头，她立马催促我抓紧时间去买面条，因为再晚一点就要收摊了。
+昨天从外面回来的时候，夕阳的余晖已被街市上的灯火掩没，直到渐渐地远离了闹市，夜晚的氛围终于在微风中扑面而来。抬头看时，深蓝色的天空中零星点缀着三两颗星星，我来不及驻足，已被人流裹挟着向前走去。像往常一样，我转身走进菜场，人依然是那些人，不过陌生和熟悉实在是两种风景，譬如眉清目秀的“豆腐西施”，陌生时你只觉得清冷，而熟悉时你会觉得杀伐果断。这一个月下来，卖菜的阿姨甚至记住了我，看我买了圆白菜、胡萝卜和洋葱，便问我是打算做炒面麽，我还是像过去一样点点头，她立马催促我抓紧时间去买面条，因为再晚一点就要收摊了。
 
 这个五一小长假，我还是没能回去，疫情让我回家的期盼从春节推到五一，再推下去便只有国庆节了，不知命运是否会让我如愿以偿。我问阿姨，难道你们放假都不休息吗？阿姨只是笑着说，我们放假了你去哪里买菜啊！我倒不是担心这个，只是在上班族眼中的 996、大小周，在这个世界上一部分人的眼中是如此的稀疏平常。我立马联想到了我的母亲，我每次就算回到家里，她还是像往常一样忙碌着，仿佛全然没有假期这种概念，可知道我喜欢吃饺子，每次都忙不迭地给我包饺子，大概是因为一切似曾相识，一码通升级的那几天，阿姨拜托我教她使用新版小程序，我突然想起来，在家里的时候，我基本就是这样教父母使用智能手机的。
 
