--- a/content/posts/再见-人间四月天.md
+++ b/content/posts/再见-人间四月天.md
@@ -24,4 +24,4 @@ image:
 
 太阳照在我的背上是如此的温暖惬意，很多东西就像陈年的老风湿一样，如果能经常拿出来晒一晒，那么下雨天就不会感到那么疼痛。以前，我不理解，为什么老年人晒太阳，一坐就是半天。等到长大了才明白，目之所及，皆是回忆；心之所想，皆是过往；眼之所看，皆是遗憾。前几天，我在家里翻来覆去地找了好几遍，找一副放了很久的画，也许是搬家的时候弄丢了吧，虽有遗憾，不逃避、不沉沦，这大概就是我当下的心境。以前出去压马路，我说我是为了学习别人的穿搭，朋友说我这是东施效颦。现在出去，会说这样穿蛮好看的，假如我有1米8的大长腿，穿出来一定比他还要好看。就这样，一路从真维斯、森马逛到海澜之家，再到优衣库，虽然我没有设牛症，可以当众裸露上身试衣服，可至少看见喜欢的会亲自穿来试试看，期待更好的自己，接纳当下的自己，这就是我现在的生存哲学。
 
-某个时刻，报话大楼的钟声缓缓敲响，这是对四月的告别，这是对五月的期盼，我看了看手机，相差两分钟，可那又有什么关系呢？早上做完核酸，这回发的是王昭君的贴纸，我说这事打算出塞吗？不知道目的地是哪里？当然，最坏的结果无非是被封在小区里，不要说出塞，连家都出不去。朋友又开始讲扩大桃花运云云，这人怎么这么迷信啊，古人说，“人间四月芳菲尽，山寺桃花始盛开”，四月芳菲已尽，为了扩大桃花运，我应该去山上寺庙里当和尚。呵，果然啊，只有魔法才能打败魔法啊。
+某个时刻，报话大楼的钟声缓缓敲响，这是对四月的告别，这是对五月的期盼，我看了看手机，相差两分钟，可那又有什么关系呢？早上做完核酸，这回发的是王昭君的贴纸，我说这事打算出塞吗？不知道目的地是哪里？当然，最坏的结果无非是被封在小区里，不要说出塞，连家都出不去。朋友又开始讲扩大桃花运云云，这人怎么这么迷信啊，古人说，“人间四月芳菲尽，山寺桃花始盛开”，四月芳菲已尽，为了扩大桃花运，我应该去山上寺庙里出家当和尚。呵，果然啊，只有魔法才能打败魔法啊。
