修改错别字

--- a/content/posts/再见-人间四月天.md
+++ b/content/posts/再见-人间四月天.md
@@ -24,6 +24,6 @@ image: /posts/再见-人间四月天/20220503221743.jpg
 
 朋友曾经问我，是不是特别喜欢小孩子？我想，没人能拒绝一个在夕阳下大口吃着米花的孩童，可喜欢是不是就一定要生一个呢？与其说我喜欢小孩子，不如说我更喜欢它们懵懂、天真、无忧无惧的状态，而一切的岁月静好、世事安稳，背后负重前行的那个人，我看不到、更感受不到，所以，我会觉得浪漫、觉得可爱，世界上到底有没有互相感同身受的两个人呢？我想，我永远无法回答，我唯一能做的就是不停地怀念，那些已经永远逝去的日子，或者是夏天坐在凉席上吃西瓜，帮爷爷拨弄头上的白头发，或者是牵着一个人的手在汹涌的人潮里穿梭，两边满是红色的灯笼高高垂下。有人说，世上有种温柔叫做[《夏目友人帐》](https://movie.douban.com/subject/3060542/)，可四月终究是在熙熙攘攘中滑走啦，就像疫情过后再去青龙寺，终究是错过了樱花呢？
 
-太阳照在我的背上是如此的温暖惬意，很多东西就像陈年的老风湿一样，如果能经常拿出来晒一晒，那么下雨天就不会感到那么疼痛。以前，我不理解，为什么老年人晒太阳，一坐就是半天。等到长大了才明白，目之所及，皆是回忆；心之所想，皆是过往；眼之所看，皆是遗憾。前几天，我在家里翻来覆去地找了好几遍，找一副放了很久的画，也许是搬家的时候弄丢了吧，虽有遗憾，不逃避、不沉沦，这大概就是我当下的心境。以前出去压马路，我说我是为了学习别人的穿搭，朋友说我这是东施效颦。现在出去，会说这样穿蛮好看的，假如我有 1 米 8 的大长腿，穿出来一定比他还要好看。就这样，一路从真维斯、森马逛到海澜之家，再到优衣库，虽然我没有设牛症，可以当众裸露上身试衣服，可至少看见喜欢的衣服，会对着镜子亲自穿来试试看，期待更好的自己，接纳当下的自己，这就是我现在的生存哲学。
+太阳照在我的背上是如此的温暖惬意，很多东西就像陈年的老风湿一样，如果能经常拿出来晒一晒，那么下雨天就不会感到那么疼痛。以前，我不理解，为什么老年人晒太阳，一坐就是半天。等到长大了才明白，目之所及，皆是回忆；心之所想，皆是过往；眼之所看，皆是遗憾。前几天，我在家里翻来覆去地找了好几遍，找一副放了很久的画，也许是搬家的时候弄丢了吧，虽有遗憾，不逃避、不沉沦，这大概就是我当下的心境。以前出去压马路，我说我是为了学习别人的穿搭，朋友说我这是东施效颦。现在出去，会说这样穿蛮好看的，假如我有 1 米 8 的大长腿，穿出来一定比他还要好看。就这样，一路从真维斯、森马逛到海澜之家，再到优衣库，虽然我没有社牛症，可以当众裸露上身试衣服，可至少看见喜欢的衣服，会对着镜子亲自穿来试试看，期待更好的自己，接纳当下的自己，这就是我现在的生存哲学。
 
 某个时刻，报话大楼的钟声缓缓敲响，这是对四月的告别，这是对五月的期盼，我看了看手机，相差两分钟，可那又有什么关系呢？早上做完核酸，这回发的是王昭君的贴纸，我说这是打算出塞吗？不知道目的地是哪里？当然，最坏的结果无非是被封在小区里，不要说出塞，连家都出不去。朋友又开始讲扩大桃花运云云，这人怎么这么迷信啊！古人说，「人间四月芳菲尽，山寺桃花始盛开」，四月芳菲已尽，为了扩大桃花运，我应该去山上寺庙里出家当和尚。呵，果然啊，只有魔法才能打败魔法啊。
