--- a/content/posts/假如时间有温度.md
+++ b/content/posts/假如时间有温度.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 2136925853
 categories:
 - 生活感悟
@@ -13,7 +13,9 @@ tags:
 - 感悟
 title: 假如时间有温度
 toc: true
+image: /posts/假如时间有温度/cover.jpg
 ---
+{{<meting server="netease" type="song" id="515573352">}}
 
 我一直在想，世事无常，该是一种什么样的感觉。直到我读到夏目先生的《我是猫》，先生在书中不无感慨地写道，“**世事变迁就像猫的眼珠一样变幻莫测**”。可此时此刻，我会不由得觉得，世事无常，更像是时间突然间有了温度，“**春观夜樱，夏望繁星，秋赏满月，冬会初雪**”，拥有这般温度的时间毫无疑问是浪漫的，可世事无常所带来的时间的温度，更像是某种意义上的极致，譬如从地球两极瞬移到赤道，或者是一场大爆炸后突兀着的宁静。也许，四季还是那个四季，无非是我一厢情愿的自以为是，时间真的有温度吗？
 
