--- a/content/posts/洗衣随想曲.md
+++ b/content/posts/洗衣随想曲.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 3938682696
 categories:
 - 生活感悟
@@ -12,6 +12,7 @@ tags:
 - 生活
 title: 洗衣随想曲
 toc: true
+image: /posts/洗衣随想曲/cover.jpg
 ---
 
 对我而言，洗衣服是周末的例行活动，尤其是在炎热的夏天。也许，你会自顾自地说，衣服不必攒到周末去洗，如果你愿意下班后腾出一点时间。可人的惰性，正如在太阳底下会流汗一般寻常，如果我愿意，你也许会早一点看到，这些只在周末显得安静的文字。
