--- a/content/posts/大护法-花生镇里的成人童话.md
+++ b/content/posts/大护法-花生镇里的成人童话.md
@@ -9,7 +9,8 @@ tags:
 - 大护法
 - 童话
 - 随笔
-title: 《大护法》—— 花生镇里的成人童话
+title: 《大护法》：花生镇里的成人童话
+image: /posts/大护法-花生镇里的成人童话/cover.jpg
 ---
 
 {{<douban type="movie" id="26811587">}}
