图片 CDN 加速测试

--- a/content/posts/大护法-花生镇里的成人童话.md
+++ b/content/posts/大护法-花生镇里的成人童话.md
@@ -10,7 +10,7 @@ tags:
 - 童话
 - 随笔
 title: 《大护法》：花生镇里的成人童话
-image: /posts/大护法-花生镇里的成人童话/cover.jpg
+image: //cdn.jsdelivr.net/gh/qinyuanpei/blog.yuanpei.me@master/posts/大护法-花生镇里的成人童话/cover.jpg
 ---
 
 {{<douban type="movie" id="26811587">}}
