--- a/content/posts/杂感-七月寄望.md
+++ b/content/posts/杂感-七月寄望.md
@@ -12,7 +12,7 @@ tags:
 - 思考
 title: 杂感·七月寄望
 toc: true
-image: /posts/杂感-七月寄望/cover.jpg
+image: //cdn.jsdelivr.net/gh/qinyuanpei/blog.yuanpei.me@master/posts/杂感-七月寄望/cover.jpg
 ---
 
 {{<meting server="netease" type="song" id="1468069297">}}
