切回相对路径

--- a/content/posts/米花之味：永远相信美好的事情.md
+++ b/content/posts/米花之味：永远相信美好的事情.md
@@ -9,7 +9,7 @@ tags:
 - 米花之味
 - 电影
 title: 米花之味：永远相信美好的事情
-image: //cdn.jsdelivr.net/gh/qinyuanpei/blog.yuanpei.me@master/posts/米花之味：永远相信美好的事情/cover.jpg
+image: /posts/米花之味：永远相信美好的事情/cover.jpg
 ---
 
 {{<douban type="movie" id="27077266">}}
