完成统计页面移植

--- a/content/posts/函数式编程常用术语.md
+++ b/content/posts/函数式编程常用术语.md
@@ -1,6 +1,7 @@
----
+﻿---
 abbrlink: 2171683728
-categories: 读书笔记
+categories: 
+- 读书笔记
 date: 2017-02-02 19:21:12
 description: ''
 slug: 2171683728
