--- a/content/posts/作为技术宅的我，是这样追鬼滅の刃的.md
+++ b/content/posts/作为技术宅的我，是这样追鬼滅の刃的.md
@@ -14,6 +14,7 @@ tags:
 - Python
 title: 作为技术宅的我，是这样追鬼滅の刃的
 toc: true
+image: /posts/作为技术宅的我，是这样追鬼滅の刃的/cover.jpg
 ---
 {{<douban type="movie" id="30210221">}}
 
