支持 codepen 短代码

--- a/content/posts/百度地图加载海量标注性能优化策略.md
+++ b/content/posts/百度地图加载海量标注性能优化策略.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 3131944018
 categories:
 - 前端开发
@@ -28,7 +28,7 @@ title: 百度地图加载海量标注性能优化策略
 
 所以，一个简洁的 Marker 类和复杂的 DOM 结构，会在性能上存在巨大差异，这恰恰是我们加载了 800 多个点就产生性能问题的原因，因为一个“好看”的标注物，居然由 4 个 DOM 节点组成，而这个“好看”的标注物还不知道要怎么样实现 Marker 类里的右键菜单。所以，追求“好看”有问题吗？没有，可华而不实的“好看”，恰恰是性能降低的万恶之源，更不用说，因为覆盖物不会从地图上删除，每次框选都要进行 800 多次的点的检测了，而这些除了开发没有人会在乎，总有人摆出一副**“这个需求很简单，怎么实现我不管”**的态度……虽然这种方案已经被 Pass 掉了，这里我们还是通过一个简单的示例，来演示下 MarkerClusterer 插件的简单使用吧！以后对于前端类的代码，博主会优先使用[CodePen](https://codepen.io)进行展示，因为这样子显然比贴代码要生动呀！
 
-{% codepen qinyuanpei qBWJgGE dark [css,result 480px] %}
+{{<codepen id="qBWJgGE" user="qinyuanpei">}}
 
 这里稍微提带说一下这个插件的优化，经博主测试，在标记物数目达到 100000 的时候，拖拽地图的时候可以明显的感觉的卡顿，这一点大家可以直接在[CodePen](https://codepen.io)中进行测试。产生性能问题的原因主要在以下代码片段：
 
@@ -100,7 +100,7 @@ Cluster.prototype.render = function(){
 
 OK，接下来介绍第二种方案，其实从 Canvas API 你就可以想到我要说什么了。Canvas API 是 HTML5 中提供的图形绘制接口，类似于我们曾经接触过的 GDI/GDI+、Direct2D、OpenGL 等等。有没有觉得和游戏越来越近啦，哈哈！百度地图 API v3 中提供了基于 Canvas API 的接口，我们可以把这些“好看”的覆盖物绘制到一个层上面去，显然这种方式会比 DOM 更高效，因为博主亲自做了实验，一次性绘制 10 万个点放到地图上，真的是一点都不卡诶，要说缺点的话嘛，嗯，你想嘛，这都是不是 DOM 了，产品经理那些吊炸天的脑洞还怎么搞？比如最基本的点击，可能要用简单的 2D 碰撞来处理啦，然后就是常规的坐标系转换，听起来更像是在做游戏了，对不对？谁让那么多的游戏都是用 HTML5 开发的呢？同样的，这里给出一个简单的示例：
 
-{% codepen qinyuanpei aboRxYq dark [css,result 480px] %}
+{{<codepen id="aboRxYq" user="qinyuanpei">}}
 
 这个方案真正尝试去做的时候，发现最难的地方是给 Canvas 里的元素绑定事件，细心的朋友会发现，博主在这里尝试了两种方案。**第一种，通过判断点是否在矩形内来判断是否完成了点击，主要的问题是随着点的数目的增加判断的量级会越来越大。第二种，通过 addHitRegion()增加一个可点击区域，这种的性能明显要比第一种好，唯一的限制在于浏览器的兼容性。**目前，需要在 Chrome 中开启`Experimental Web Platform features`。这个探索的过程是相当不易的，大家可以通过[CodePen](https://codepen.io)进一步感受一下哈！
 
