--- a/content/posts/百度地图加载海量标注性能优化策略.md
+++ b/content/posts/百度地图加载海量标注性能优化策略.md
@@ -16,7 +16,7 @@ title: 百度地图加载海量标注性能优化策略
 
 # 问题还原 
 
-根据 IP 定位至用户所在城市后，后台一次性查询出近一个月内的订单，然后将其全部在地图上展示出来。当用户点击或者框选标注物时，对应的订单配载到当前运单中。当用户再次点击标注物，则对应的订单从当前运单中删除。以西安市为例，一次性加载 850 个左右的订单，用户操作一段时间后，Chrome 内存占用达 250 多兆，拖拽地图的过程中可以明显地感觉到页面卡顿。因为自始至终，地图上的订单数量不变，即不会移除覆盖物，同时需要在内存中持久化订单相关的信息。所以，在城市配载 1.0 版本的时候，测试同事给我提了一个性能方面的 Bug。可开始提方案并坚持这样做的，难道不是产品吗？为什么要给开发提 Bug 呢？OK，我们来给不靠谱的产品一点点填坑吧，大概想到了下面三种方案，分别是`标注物聚合`、`Canvas API`和`视野内可见`。
+根据 IP 定位至用户所在城市后，后台一次性查询出近一个月内的订单，然后将其全部在地图上展示出来。当用户点击或者框选标注物时，对应的订单配载到当前运单中。当用户再次点击标注物，则对应的订单从当前运单中删除。以西安市为例，一次性加载 850 个左右的订单，用户操作一段时间后，Chrome 内存占用达 250 多兆，拖拽地图的过程中可以明显地感觉到页面卡顿。因为自始至终，地图上的订单数量不变，即不会移除覆盖物，同时需要在内存中持久化订单相关的信息。所以，在城市配载 1.0 版本的时候，测试同事给我提了一个性能方面的 Bug。可开始提方案并坚持这样做的，难道不是产品吗？为什么要给开发提 Bug 呢？OK，我们来给不靠谱的产品一点点填坑吧，大概想到了下面三种方案，分别是 `标注物聚合` 、`Canvas API` 和 `视野内可见` 。
 
 ![密密麻麻的地图](https://ww1.sinaimg.cn/large/4c36074fly1g74q1ff3exj217w0l74au.jpg)
 
@@ -26,13 +26,13 @@ title: 百度地图加载海量标注性能优化策略
 
 ![标注聚合器MarkerClusterer](https://ww1.sinaimg.cn/large/4c36074fly1g74qdli87bj21200mktj6.jpg)
 
-所以，一个简洁的 Marker 类和复杂的 DOM 结构，会在性能上存在巨大差异，这恰恰是我们加载了 800 多个点就产生性能问题的原因，因为一个“好看”的标注物，居然由 4 个 DOM 节点组成，而这个“好看”的标注物还不知道要怎么样实现 Marker 类里的右键菜单。所以，追求“好看”有问题吗？没有，可华而不实的“好看”，恰恰是性能降低的万恶之源，更不用说，因为覆盖物不会从地图上删除，每次框选都要进行 800 多次的点的检测了，而这些除了开发没有人会在乎，总有人摆出一副**“这个需求很简单，怎么实现我不管”**的态度……虽然这种方案已经被 Pass 掉了，这里我们还是通过一个简单的示例，来演示下 MarkerClusterer 插件的简单使用吧！以后对于前端类的代码，博主会优先使用[CodePen](https://codepen.io)进行展示，因为这样子显然比贴代码要生动呀！
+所以，一个简洁的 Marker 类和复杂的 DOM 结构，会在性能上存在巨大差异，这恰恰是我们加载了 800 多个点就产生性能问题的原因，因为一个“好看”的标注物，居然由 4 个 DOM 节点组成，而这个“好看”的标注物还不知道要怎么样实现 Marker 类里的右键菜单。所以，追求“好看”有问题吗？没有，可华而不实的“好看”，恰恰是性能降低的万恶之源，更不用说，因为覆盖物不会从地图上删除，每次框选都要进行 800 多次的点的检测了，而这些除了开发没有人会在乎，总有人摆出一副“**这个需求很简单，怎么实现我不管**”的态度……虽然这种方案已经被 Pass 掉了，这里我们还是通过一个简单的示例，来演示下 MarkerClusterer 插件的简单使用吧！以后对于前端类的代码，博主会优先使用 [CodePen](https://codepen.io) 进行展示，因为这样子显然比贴代码要生动呀！
 
 {{<codepen id="qBWJgGE" user="qinyuanpei">}}
 
-这里稍微提带说一下这个插件的优化，经博主测试，在标记物数目达到 100000 的时候，拖拽地图的时候可以明显的感觉的卡顿，这一点大家可以直接在[CodePen](https://codepen.io)中进行测试。产生性能问题的原因主要在以下代码片段：
+这里稍微提带说一下这个插件的优化，经博主测试，在标记物数目达到 100000 的时候，拖拽地图的时候可以明显的感觉的卡顿，这一点大家可以直接在 [CodePen](https://codepen.io) 中进行测试。产生性能问题的原因主要在以下代码片段：
 
-```plain
+```javascript
    /**
      * 向该聚合添加一个标记。
      * @param {Marker} marker 要添加的标记。
@@ -77,9 +77,9 @@ title: 百度地图加载海量标注性能优化策略
     };
 ```
 
-这段代码主要的问题在于频繁地向地图添加覆盖物，换言之，在这里产生了对 DOM 的频繁修改，具体可参考`_addToClosestCluster`方法。一种比较好的优化是，等所有计算结束后再一次性应用到 DOM。所以，这里我们可以封装一个 render()方法：
+这段代码主要的问题在于频繁地向地图添加覆盖物，换言之，在这里产生了对 DOM 的频繁修改，具体可参考 `_addToClosestCluster` 方法。一种比较好的优化是，等所有计算结束后再一次性应用到 DOM。所以，这里我们可以封装一个 `render()` 方法：
 
-```plain
+```javascript
 Cluster.prototype.render = function(){
     var len = this._markers.length; 
     if (len < this._minClusterSize) {
@@ -102,13 +102,13 @@ OK，接下来介绍第二种方案，其实从 Canvas API 你就可以想到我
 
 {{<codepen id="aboRxYq" user="qinyuanpei">}}
 
-这个方案真正尝试去做的时候，发现最难的地方是给 Canvas 里的元素绑定事件，细心的朋友会发现，博主在这里尝试了两种方案。**第一种，通过判断点是否在矩形内来判断是否完成了点击，主要的问题是随着点的数目的增加判断的量级会越来越大。第二种，通过 addHitRegion()增加一个可点击区域，这种的性能明显要比第一种好，唯一的限制在于浏览器的兼容性。**目前，需要在 Chrome 中开启`Experimental Web Platform features`。这个探索的过程是相当不易的，大家可以通过[CodePen](https://codepen.io)进一步感受一下哈！
+这个方案真正尝试去做的时候，发现最难的地方是给 Canvas 里的元素绑定事件，细心的朋友会发现，博主在这里尝试了两种方案。**第一种，通过判断点是否在矩形内来判断是否完成了点击，主要的问题是随着点的数目的增加判断的量级会越来越大。第二种，通过 addHitRegion()增加一个可点击区域，这种的性能明显要比第一种好，唯一的限制在于浏览器的兼容性。**目前，需要在 Chrome 中开启 `Experimental Web Platform features` 。这个探索的过程是相当不易的，大家可以通过 [CodePen](https://codepen.io) 进一步感受一下哈！
 
 # 视野内可见方案
 
 相信大家听完前两个方案都相当失望吧，一个方案用不了，一个方案太麻烦，那这个肯定就是最终可行的方案了吧！猜对了，这真的是体现了大道至简，一开始试着从内存里持久化的数据入手，可最终收到效果的反而是这个最不起眼的方案。简单来说，就是把视野内的覆盖物设为 visible，而把视野外的覆盖物设置 hidden。相当朴素的一种思维对吧，百度地图 API 中有一个返回当前视野的接口 GetBounds()，它回返回一个矩形。所以，我们只需要调用百度接口判断覆盖物在不在这个矩形里就可以了，显然，这里又会循环 800 多次，不过产品经理们都不在乎对吧……顺着这个思路，我们可以写出下面的代码，并在拖动地图和缩放地图的时候调用它：
 
-```plain
+```javascript
 //监听地图缩放/拖拽事件
 map.addEventListener("moveend", showOverlaysByView);
 map.addEventListener("zoomend", showOverlaysByView);
