增加豆瓣卡片

--- a/content/posts/我是猫，一只特立独行的猫.md
+++ b/content/posts/我是猫，一只特立独行的猫.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 352037321
 categories:
 - 读书笔记
@@ -11,6 +11,7 @@ tags:
 - 我是猫
 title: 我是猫，一只特立独行的猫
 ---
+{{<douban type="book" id="30401846">}}
 
 终于在除夕夜到来前，在 Kindle 上读完了 2017 年的最后一本书，来自夏目漱石先生的《我是猫》。起初买这本书的动机说起来非常滑稽，一来以为这会是一本诙谐幽默的书，二来对夏目这个名字莫名地充满好感。我读的是曹曼翻译的中文译本，读时觉得这位作者的文字清新素雅，即使全书行文节奏堪称缓慢到极点，想来应该是我们这个时代的人物。及至翻阅作者生平，始知这位被誉为“国民大作家”的日本作家，早在 100 年前就在日本文学史上享有盛名。这种感觉如何去形容呢？大概就是杨过从剑冢石刻的寥寥数语中，遥想独孤求败"生平求一敌手而不可得"的寂寥难堪。这位老先生的文字可以说非常”摩登“了，因为在 100 年后的今天再次读来，竟完全读不出违和感来，所谓”嬉笑怒骂皆成文章“，讽刺与幽默杂然相陈，这是我喜欢这本书的理由。
 
