--- a/content/posts/不知老之将至.md
+++ b/content/posts/不知老之将至.md
@@ -1,4 +1,4 @@
----
+﻿---
 abbrlink: 888549816
 categories:
 - 生活感悟
@@ -10,6 +10,7 @@ tags:
 - 2019
 - 年度
 title: 不知老之将至
+image: /posts/不知老之将至/cover.jpg
 ---
 
 我以为，时间是这个世界上最残忍的存在。因为，无论如何，你都无法阻止这如齿轮般互相咬合的时光机器，即使这世界上并没有所谓的“永动机”。习惯于沉默的时间之轮，你在或者不在，丝毫不影响它衡量宇宙万物的尺度。也许，是因为我们所拥有的时间太过短暂，所以，当一切都流失殆尽时，我们所能寄托的便只有不那么确定的未来。时间怎么会变得残忍呢？它无喜无悲俯视众生，倒像是一位入定参禅的老僧，有情感的分明是我们这些人类啊。
