--- a/content/posts/程序员视角下的三体世界随想.md
+++ b/content/posts/程序员视角下的三体世界随想.md
@@ -23,7 +23,7 @@ image: /posts/程序员视角下的三体世界随想/cover.jpg
 
 ![三体运动 “混沌” 模型示意图](/posts/程序员视角下的三体世界随想/Three-Body-Problem-Model-03.gif)
 
-从某种意义上来讲，三体问题贯穿了整个物理学的发展历程。具体来讲，当 N = 1 时，单个质点的运动轨迹是匀速直线运动，这对应的是牛顿第一定律；当 N = 2 时，两个质点的相对位置始终在一条圆锥曲线上，这对应的是[开普勒定律](https://baike.baidu.com/item/开普勒定律)；当 N = 3 时，这就是著名的三体问题，此时，这三个质子的运动轨迹是不可预测的，而从数学的角度来看，三体问题没有解析通解，即：我们没有办法用一个通用的公式来描述其运动轨迹。一个最浅显的例子是，在三维空间中描述位置需要 x、y、z 三个参数，因此，每一个质子可以写出 3 个二阶微分方程或者 6 个 一阶微分方程。那么，当有三个这样的质子的时候，最多的时候会得到 18 个一阶微分方程。可以预见，求解三体问题，等价于求解这样 18 个一阶微分方程构成的方程组，其难度可想而知。
+从某种意义上来讲，三体问题贯穿了整个物理学的发展历程。具体来讲，当 N = 1 时，单个质点的运动轨迹是匀速直线运动，这对应的是牛顿第一定律；当 N = 2 时，两个质点的相对位置始终在一条圆锥曲线上，这对应的是[开普勒定律](https://baike.baidu.com/item/开普勒定律)；当 N = 3 时，这就是著名的三体问题，此时，这三个质点的运动轨迹是不可预测的，而从数学的角度来看，三体问题没有解析通解，即：我们没有办法用一个通用的公式来描述其运动轨迹。一个最浅显的例子是，在三维空间中描述位置需要 x、y、z 三个参数，因此，每一个质点可以写出 3 个二阶微分方程或者 6 个 一阶微分方程。那么，当有三个这样的质点的时候，最多的时候会得到 18 个一阶微分方程。可以预见，求解三体问题，等价于求解这样 18 个一阶微分方程构成的方程组，其难度可想而知。
 
 ![三体运动 “三角形” 模型示意图](/posts/程序员视角下的三体世界随想/Three-Body-Problem-Model-01.gif)
 
