--- a/content/posts/程序员视角下的三体世界随想.md
+++ b/content/posts/程序员视角下的三体世界随想.md
@@ -8,8 +8,8 @@ slug: Random-Thoughts-Of-Three-Body-World-As-Programmers
 tags:
 - 三体
 - 程序员
-- 编程
-- 随笔
+- 科幻小说
+- 技术思考
 title: 程序员视角下的三体世界随想
 toc: true
 image: /posts/程序员视角下的三体世界随想/cover.jpg
