处理失效图片

--- a/content/posts/教你一步步实现一个虚拟摇杆.md
+++ b/content/posts/教你一步步实现一个虚拟摇杆.md
@@ -251,8 +251,8 @@ public class JoyStick3D : MonoBehaviour
 
 最终程序的运行效果如下图所示，我们编写的这个虚拟摇杆可以在手机上完美的运行，欢饮大家来一起测试和吐槽！
 
-![2D模式演示](https://ww1.sinaimg.cn/large/4c36074fly1fzixbnf1fsg20nm0d8avw.jpg)
+![2D模式演示](/posts/教你一步步实现一个虚拟摇杆/20151030145705436.gif)
 
-![3D模式演示](https://ww1.sinaimg.cn/large/4c36074fly1fzix8zemu3g20nf0dbaky.jpg)
+![3D模式演示](/posts/教你一步步实现一个虚拟摇杆/20151030150441747.gif)
 
 好了，今天的内容就是这样啦！欢迎大家继续关注我的博客，希望大家喜欢！
